# mhook

./: .gitignore  CMakeLists.txt  COPYING  README.md  appveyor.yml  build-vc10.bat  build-vc11.bat  mhook-test.cpp  mhook.sln  mhook.vcxproj
.github/workflows/: ci.yml
disasm-lib/: disasm.c  disasm.h  disasm_x86.c  disasm_x86_tables.h  misc.h
mhook-lib/: mhook.c  mhook.cpp  mhook.h
mhook-test/: mhook-test.cpp
pom/include/: assembly.xml  pom.xml
pom/x64-windows-static-mt-msvc10-debug/: pom.xml
pom/x64-windows-static-mt-msvc10-release/: pom.xml
pom/x64-windows-static-mt-msvc11-debug/: assembly.xml  pom.xml
pom/x64-windows-static-mt-msvc11-release/: assembly.xml  pom.xml
pom/x86-windows-static-mt-msvc10-debug/: assembly.xml  pom.xml
pom/x86-windows-static-mt-msvc10-release/: assembly.xml  pom.xml
pom/x86-windows-static-mt-msvc11-debug/: assembly.xml  pom.xml
pom/x86-windows-static-mt-msvc11-release/: pom.xml
